[package]
name = "hegel-workload"
version = "0.1.0"
edition = "2021"

[features]
antithesis = ["hegeltest/antithesis"]

[dependencies]
hegeltest = "0.3"
libp2p = { version = "0.55", features = ["gossipsub", "tcp", "noise", "yamux", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
futures = "0.3"
