[package]
name = "hegel-workload"
version = "0.1.0"
edition = "2021"

[features]
antithesis = ["hegeltest/antithesis"]

[dependencies]
hegeltest = "0.3"
libp2p = { version = "0.55", features = ["gossipsub", "identify", "tcp", "noise", "yamux", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
getrandom = "0.2"
futures = "0.3"
fvm_shared = { version = "4", features = [] }
fvm_ipld_encoding = "0.5"
serde_bytes = "0.11"
serde = { version = "1", features = ["derive"] }
cid = { version = "0.11", features = ["serde"] }
multihash-codetable = { version = "0.1", features = ["sha2"] }
multihash = "0.19"
