[package]
name = "hegel-workload"
version = "0.1.0"
edition = "2021"

[features]
antithesis = ["hegeltest/antithesis", "antithesis_sdk/full"]

[dependencies]
hegeltest = "0.3"
antithesis_sdk = "0.2"
libp2p = { version = "0.55", features = ["gossipsub", "identify", "tcp", "noise", "yamux", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
getrandom = "0.2"
futures = "0.3"
fvm_shared = { version = "4", features = [] }
fvm_ipld_encoding = "0.5"
serde_bytes = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cid = { version = "0.11", features = ["serde"] }
multihash-codetable = { version = "0.1", features = ["sha2"] }
multihash = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
k256 = { version = "0.13", features = ["ecdsa"] }
blake2b_simd = "1"
hex = "0.4"
